Noteworthy changes in version 1.2.0
------------------------------------------------

 * New functions to allow the creation of X.509 certificates.

 * Interface changes relative to the 1.1.0 release:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ksba_certreq_set_serial          NEW.
 ksba_certreq_set_issuer          NEW.
 ksba_certreq_set_validity        NEW.


Noteworthy changes in version 1.1.0 (2010-10-26)
------------------------------------------------

 * New functions to fix a leak in dirmngr.

 * Interface changes relative to the 1.0.0 release:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ksba_reader_set_release_notify   NEW
 ksba_writer_set_release_notify   NEW


Noteworthy changes in version 1.0.8 (2010-07-15)
------------------------------------------------

 * Support for WindowsCE.

 * Builds cleanly from SVN even when cross-compiling.

 * Fixed a CMS parsing bug exhibited by Lotus Notes.


Noteworthy changes in version 1.0.7 (2009-07-03)
------------------------------------------------

 * Detect overflow while parsing OIDs.  Map BER encoded OIDs to well
   known names.

 * Allow mixed case names in DNs.


Noteworthy changes in version 1.0.6 (2009-06-05)
------------------------------------------------

 * Support SHA-{384,512} based signature generation.

 * The RSA algorithmIdentifier ASN.1 sequence is now emitted with an
   explicit NULL parameter.  Despite the interop testing we did in the
   past, some software still requires this and thus we better follow
   the best current practise.


Noteworthy changes in version 1.0.5 (2009-01-09)
------------------------------------------------

 * Minor bug fixes.


Noteworthy changes in version 1.0.4 (2008-09-22)
------------------------------------------------

 * Write smimeCapabilities according to RFC3851 to help Mozilla.

 * Support DSA.

 * The visibility attribute is now used if supported by the toolchain.


Noteworthy changes in version 1.0.3 (2008-02-12)