@@ -42,6 +42,9 @@ gpg_error_t _ksba_keyinfo_from_sexp (ksba_const_sexp_t sexp,
                                      unsigned char **r_der, size_t *r_derlen)
      _KSBA_VISIBILITY_DEFAULT;
 
+gpg_error_t _ksba_algoinfo_from_sexp (ksba_const_sexp_t sexp,
+                                      unsigned char **r_der, size_t *r_derlen);
+
 gpg_error_t _ksba_sigval_to_sexp (const unsigned char *der, size_t derlen,
                                 ksba_sexp_t *r_string);
 gpg_error_t _ksba_encval_to_sexp (const unsigned char *der, size_t derlen,
