@@ -65,6 +65,7 @@
 #define ksba_certreq_set_serial            _ksba_certreq_set_serial
 #define ksba_certreq_set_issuer            _ksba_certreq_set_issuer
 #define ksba_certreq_set_validity          _ksba_certreq_set_validity
+#define ksba_certreq_set_siginfo           _ksba_certreq_set_siginfo
 #define ksba_certreq_add_subject           _ksba_certreq_add_subject
 #define ksba_certreq_build                 _ksba_certreq_build
 #define ksba_certreq_new                   _ksba_certreq_new
@@ -258,6 +259,7 @@ int ksba_asn_delete_structure (void *dummy);
 #undef ksba_certreq_set_serial
 #undef ksba_certreq_set_issuer
 #undef ksba_certreq_set_validity
+#undef ksba_certreq_set_siginfo
 #undef ksba_certreq_add_subject
 #undef ksba_certreq_build
 #undef ksba_certreq_new
@@ -420,6 +422,7 @@ MARK_VISIBLE (ksba_cert_get_user_data)
 MARK_VISIBLE (ksba_certreq_set_serial)
 MARK_VISIBLE (ksba_certreq_set_issuer)
 MARK_VISIBLE (ksba_certreq_set_validity)
+MARK_VISIBLE (ksba_certreq_set_siginfo)
 MARK_VISIBLE (ksba_certreq_add_subject)
 MARK_VISIBLE (ksba_certreq_build)
 MARK_VISIBLE (ksba_certreq_new)
