@@ -8,6 +8,7 @@ Noteworthy changes in version 1.2.0
  ksba_certreq_set_serial          NEW.
  ksba_certreq_set_issuer          NEW.
  ksba_certreq_set_validity        NEW.
+ ksba_certreq_set_siginfo         NEW.
 
 
 Noteworthy changes in version 1.1.0 (2010-10-26)
